// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> Global render should render default 1`] = `
<Component>
  <button
    className="button primary medium light"
  />
</Component>
`;

exports[`<Button> Style properties should render danger nature 1`] = `
<Component
  nature="danger"
>
  <button
    className="button danger medium light"
  />
</Component>
`;

exports[`<Button> Style properties should render danger nature and small size 1`] = `
<Component
  nature="danger"
  size="small"
>
  <button
    className="button danger small light"
  />
</Component>
`;

exports[`<Button> Style properties should render large size 1`] = `
<Component
  size="large"
>
  <button
    className="button primary large light"
  />
</Component>
`;

exports[`<Button> Style properties should render medium size 1`] = `
<Component
  size="medium"
>
  <button
    className="button primary medium light"
  />
</Component>
`;

exports[`<Button> Style properties should render primary nature 1`] = `
<Component
  nature="primary"
>
  <button
    className="button primary medium light"
  />
</Component>
`;

exports[`<Button> Style properties should render secondary nature 1`] = `
<Component
  nature="secondary"
>
  <button
    className="button secondary medium light"
  />
</Component>
`;

exports[`<Button> Style properties should render small size 1`] = `
<Component
  size="small"
>
  <button
    className="button primary small light"
  />
</Component>
`;
